# rspamd-telegram-bot

./: .env  Cargo.toml  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  bayes_disable.conf  debug_emoji  debug_emoji.rs  docker-compose.yml  env.example  redis_fix.conf  render.yaml  test-docker.sh
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: BAYES_MANAGER.md
rspamd-config/local.d/: actions.conf  classifier-bayes.conf  fuzzy_check.conf  groups.conf  lua.conf  reputation.conf  rspamd.conf.local  settings.conf  worker-controller.conf  worker-fuzzy.conf
rspamd-config/lua.local.d/: telegram.lua  telegram_modular.lua  telegram_replies.lua  telegram_simple.lua  whiteblacklist.lua
rspamd-config/lua_local.d/: telegram.lua
rspamd-config/modules.local.d/: bayes.conf  neural.conf  telegram.conf  telegram_replies.conf  whiteblacklist.conf
rspamd-config/scores.d/: bayes.conf  telegram_content_group.conf  (+6 more)
scripts/: deploy.sh  monitor_fuzzy.sh  performance_test_reputation.sh  test_fuzzy.sh  validate_fuzzy_config.sh  validate_reputation_config.sh
src/: .config.rs.swp  admin.rs  ban_manager.rs  bayes_manager.rs  commands.rs  config.rs  fuzzy_trainer.rs  lib.rs  main.rs  migration.rs  neural_manager.rs  trust_manager.rs
tests/: .integration_tests.rs.swp  ban_system_test.rs  bayes_admin_test.rs  bayes_autolearn_test.rs  bayes_integration_test.rs  bayes_test.rs  fuzzy_integration_test.rs  fuzzy_trainer_test.rs  integration_tests.rs  neural_admin_test.rs  neural_simple_test.rs  neural_test.rs  reply_aware_test.rs  reputation_test.rs  trust_manager_test.rs
(+29 files in other folders)
