[package]
name = "rspamd-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rspamd-client = { version = "0.1", features = ["async"] }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.14.1", features = ["macros"]  }
pretty_env_logger = "0.5.0"
log = "0.4"
redis = "*"
anyhow = "1.0.98"
chrono = "0.4.40"
get_if_addrs = "0.5.3"