[package]
name = "rspamd-telegram-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "rspamd_telegram_bot"
path = "src/lib.rs"

[[bin]]
name = "rspamd-telegram-bot"
path = "src/main.rs"

[dependencies]
rspamd-client = { version = "0.1", features = ["async"] }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.14.1", features = ["macros"]  }
pretty_env_logger = "0.5.0"
log = "0.4"
redis = "*"
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
get_if_addrs = "0.5.3"
once_cell = "1.21.3"
regex = "1.11.1"
dotenv = "0.15"
warp = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
teloxide = { version = "0.14.1", features = ["macros"] }
redis = { version = "*", features = ["tokio-comp"] }
serial_test = "2.0"
warp = "0.3"
serde_json = "1.0"
regex = "1.0"
bytes = "1.0"
once_cell = "1.0"
tokio = { version = "1.0", features = ["full"] }
zstd = "0.13"
